add divs and make grid with items

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Our Funky HTML Page</title>
+    <title>Culinary Page</title>
     <meta name="description" content="Our first page">
     <meta name="keywords" content="html tutorial template">
     <link rel="stylesheet" href="index.css" type="text/css">
@@ -12,7 +12,50 @@
 </head>
 
 <body>
-    Master The Culinary
+    <div class="navbar">
+        <img src="./img/png/logo.png" alt="logo" width="120rem" height="70rem">
+
+    </div>
+    <div class="main-view">
+        <div class="item item-1">
+            <p class="text">
+                <span style="font-size:xx-large;">Master The </span>
+                <br>
+                <span style="font-size:xx-large;">Culinary Arts Today </span>
+                <br>
+                <span style="font-size:medium;">Explore 250+ recipes</span>
+                <br><br>
+                <input class="my-input" placeholder="Enter your e-mail">
+                <button class="my-button"></button>
+            </p>
+        </div>
+        <div class="item item-2">
+            <img src="./img/svg/cooking.svg" alt="logo" width="250rem" height="250rem">
+        </div>
+
+        <div class="item item-3">
+            <img src="./img/svg/breakfast.svg" alt="logo" width="250rem" height="250rem">
+        </div>
+
+        <div class="item item-4">
+            <img src="./img/svg/snacks.svg" alt="logo" width="250rem" height="250rem">
+        </div>
+
+        <div class="item item-5">
+            <img src="./img/svg/barbecue.svg" alt="logo" width="250rem" height="250rem">
+        </div>
+
+        <div class="item item-6">
+            <img src="./img/svg/cookies.svg" alt="logo" width="250rem" height="250rem">
+        </div>
+
+    </div>
+    <div class="bottom-view">
+
+    </div>
+    <footer class="footer">
+
+    </footer>
 </body>
 
 </html>
