set site view, make cards

--- a/home.html
+++ b/home.html
@@ -13,8 +13,25 @@
 
 <body>
     <div class="navbar">
-        <img src="./img/png/logo.png" alt="logo" width="120rem" height="70rem">
-
+        <div>
+            <img src="./img/png/logo.png" alt="logo" width="120rem" height="70rem">
+        </div>
+        <div class="nav-list">
+            <ul>
+                <li class="active">
+                    <a href="">Home</a>
+                </li> 
+                <li>
+                    <a href=""> Recipes</a>
+                </li>
+                <li>
+                    <a href="">About</a>
+                </li>
+                <li>
+                    <a href="">Content</a>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="main-view">
         <div class="item item-1">
@@ -26,7 +43,6 @@
                 <span style="font-size:medium;">Explore 250+ recipes</span>
                 <br><br>
                 <input class="my-input" placeholder="Enter your e-mail">
-                <button class="my-button"></button>
             </p>
         </div>
         <div class="item item-2">
@@ -34,28 +50,48 @@
         </div>
 
         <div class="item item-3">
-            <img src="./img/svg/breakfast.svg" alt="logo" width="250rem" height="250rem">
+            <div>
+                <img src="./img/svg/breakfast.svg" alt="logo" width="250rem" height="250rem">
+            </div>
+            <div>
+                <span style="font-size:medium;">Breakfast ideas</span>
+            </div>
         </div>
 
         <div class="item item-4">
-            <img src="./img/svg/snacks.svg" alt="logo" width="250rem" height="250rem">
+            <div>
+                <img src="./img/svg/snacks.svg" alt="logo" width="250rem" height="250rem">
+            </div>
+            <div>
+                <span style="font-size:medium;">Breakfast ideas</span>
+            </div>
         </div>
 
         <div class="item item-5">
-            <img src="./img/svg/barbecue.svg" alt="logo" width="250rem" height="250rem">
+            <div>
+                <img src="./img/svg/barbecue.svg" alt="logo" width="250rem" height="250rem">
+            </div>
+            <div>
+                <span style="font-size:medium;">Breakfast ideas</span>
+            </div>
         </div>
 
         <div class="item item-6">
-            <img src="./img/svg/cookies.svg" alt="logo" width="250rem" height="250rem">
+            <div>
+                <img src="./img/svg/cookies.svg" alt="logo" width="250rem" height="250rem">
+            </div>
+            <div>
+                <span style="font-size:medium;">Breakfast ideas</span>
+            </div>
         </div>
 
     </div>
     <div class="bottom-view">
-
+        asd
     </div>
-    <footer class="footer">
-
-    </footer>
+    <div class="footer">
+        <p class="footer-text">© 2022 EasyMeals, All rights reserved</p>
+    </div>
 </body>
 
 </html>
