add link to another site

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Culinary Page</title>
-    <meta name="description" content="Our first page">
+    <meta name="description" content="Culinary page">
     <meta name="keywords" content="html tutorial template">
     <link rel="stylesheet" href="index.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
                     <a class="active" href="">Home</a>
                 </li>
                 <li>
-                    <a href=""> Recipes</a>
+                    <a href="./recipes.html"> Recipes</a>
                 </li>
                 <li>
                     <a href="">About</a>
