--- a/recipes.html
+++ b/recipes.html
@@ -13,7 +13,145 @@
 </head>
 
 <body>
-
+    <div class="navbar">
+        <div>
+            <img src="./img/png/logo.png" alt="logo" width="120rem" height="70rem">
+        </div>
+        <div class="nav-list column right">
+            <ul>
+                <li class="nav-list">
+                    <a href="./home.html">Home</a>
+                </li>
+                <li class="nav-list">
+                    <a class="active" href="">Recipes</a>
+                </li>
+                <li class="nav-list">
+                    <a href="">About</a>
+                </li>
+                <li class="nav-list">
+                    <a href="">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-view">
+        <div class="item">
+            <p class="text">
+                <span style="font-size:xx-large;">Recipes</span>
+                <br>
+                <span style="font-size:medium;">With shopping list</span>
+                <br><br>
+                <input class="my-input" placeholder="Search for a recipe">
+                <button class="my-button"><span style="color:white; font-size:medium">Search</span></button>
+            </p>
+        </div>
+        <div class="item">
+            <img src="./img/svg/eating_together.svg" alt="logo" width="350rem" height="350rem">
+        </div>
+    </div>
+    <div class="breakfast-photo">
+        <img class="breakfast-img" src="./img/photo/breakfast.jpg" alt="breakfast">
+    </div>
+    <div class="table-container">
+        <div class="item">
+            <table class="tg">
+                <tbody>
+                  <tr>
+                    <td class="tg-0lax" style="background-color: rgba(255, 166, 0, 0.199);">Orange Pancakes</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Oatmeal witch pecans</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">French Toast</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Breafast Burrito</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Banana Bread</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Omelet with greens</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Omelette du fromage</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Jammy egg toast</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Tropical Smoothie Bowl</td>
+                  </tr>
+                </tbody>
+                </table>
+        </div>
+        <div class="item">
+            <span style="font-size:x-large; color: orange; display: flex; justify-content: center;">Orange
+                Pancakes</span>
+            <div class="photo-container">
+                <img class="photo pancake-img" src="./img/photo/pancakes.jpg" alt="orange pancakes" width="420rem"
+                    height="230rem">
+            </div>
+            <div class="cooking-prop">
+                <div class="time">
+                    <i class="fa-solid fa-clock" style="color: orange;"></i> 25 min
+                </div>
+                <div class="servings">
+                    <i class="fa-solid fa-user" style="color: orange;"></i> 2 servings
+                </div>
+            </div>
+            <span style="color: black;"><br>Ingredients:<br></span>
+            <ul class="ingredients">
+                <li>1/2 cup of orange juice</li>
+                <li>1 tablespoon orange zest, finely grated</li>
+                <li>1 1/2 cups all-purpose flour</li>
+                <li>1/2 teaspoon baking soda</li>
+                <li>1 1/2 teaspoon baking powder</li>
+                <li>1/2 teaspoon salt</li>
+                <li>1/4 cup granulated sugar</li>
+                <li>1/2 cup milk</li>
+                <li>2 eggs</li>
+                <li>4 tablespoon butter, melted</li>
+                <li>1 tablespoon vegetable oil, to grease the pan</li>
+            </ul>
+            <span style="color: black;">Instruction:<br></span>
+            <ol class="ingredients">
+                <li>Whisk milk, eggs, orange juice and orange zest in a large bowl until smooth.</li>
+                <li>Whisk in flour, sugar, salt, baking powder and baking soda. Whisk in melted butter and stir until
+                    smooth.</li>
+                <li>Heat large pan over medium heat. Grease the pan with oil. Now, pour about 1/4 cup of the butter into
+                    the pan for each pancake.</li>
+                <li>When bubbles begin to appear on top, flip the pancakes and cook for 1-2 mnutes or until the other
+                    side is lightly brown.</li>
+                <li>Place the pancakes into a serving plate. Serve with whipped cream and a drizzle of maple syrop on
+                    top.</li>
+            </ol>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="row">
+            <div class="column">
+                <p class="footer-text"><span>&#169</span> 2022 EasyMeals, All rights reserved</p>
+            </div>
+            <div class="column right">
+                <ul class="icons-list">
+                    <li>
+                        <i class="fa-brands fa-2x fa-instagram"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-2x fa-facebook-square"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-2x fa-twitter"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-2x fa-pinterest-square"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
